src/main/java/com/example/back/global/error/exception/GlobalException.java
package com.example.back.global.error.exception;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class GlobalException extends RuntimeException{
    private final ErrorCode errorCode;
}
